--- a/blog-list.html
+++ b/blog-list.html
@@ -1,186 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>健身飲食文章</title>
-	<script src="./js/jquery-3.5.1.js"></script>
-	<script src="./js/jquery-ui.min.js"></script>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/rwd.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>健身飲食文章</title>
+  <script src="./js/jquery-3.5.1.js"></script>
+  <script src="./js/jquery-ui.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/rwd.css">
 </head>
+
 <body>
-	<div class="wrapper"> 
+  <div class="wrapper">
 
-<!----------標題----------- -->
-	<header>
-		<a href="index.html" class="logo">
-			<img src="img/logo10-8.png" alt="">
-		</a>
-		<span class="material-icons burger">reorder</span>
-		<div class="maun_sprite">
-			<ul class="menu">
-				<li>
-					<a href="#" class="tran-btn">開始訓練</a>
-					<ol>
-						<li class="traning-btn1">
-							<a href="training.html">新手入門</a>
-						</li>
-						<li class="traning-btn2">
-							<a href="#">高級技巧</a>
-						</li>
-						<li class="traning-btn3">
-							<a href="#">高強技巧</a>
-						</li>
-					</ol>
-				</li> 
-				<li>
-					<a href="product.html">訓練裝備</a>
-				</li>
-				<li>
-					<a href="blog-list.html" class="blog-list-btn">健身文章</a>
-				</li>
-				<li>
-					<a href="godman.html">大神連結</a>
-				</li>
-			</ul>
-			<ul class="sprite">
-				<li class="member">
-					<a href="#"></a>
-				</li>
-				<li class="search">
-					<a href="#"></a>
-				</li>
-				<li class="sh-cart">
-					<a href="#"></a>
-				</li> 
-			</ul>
-		
-	</header>
-<!-- 部落格文章總攬 -->
-<div class="blog-list">
-	<ul>
-		<li>
-			<div class="nav-standardcard">
-				<div class="blog-list-pic">
-					<a href="blog-new2020-losewight.html">
-						<img src="img/Natalia-Kitaeva-500-300.png" alt="">
+    <!----------標題----------- -->
+    <header>
+      <a href="index.html" class="logo">
+        <img src="img/logo10-8.png" alt="">
+      </a>
+      <span class="material-icons burger">reorder</span>
+      <div class="maun_sprite">
+        <ul class="menu">
+          <li>
+            <a href="#" class="tran-btn">開始訓練</a>
+            <ol>
+              <li class="traning-btn1">
+                <a href="training.html">新手入門</a>
+              </li>
+              <li class="traning-btn2">
+                <a href="#">高級技巧</a>
+              </li>
+              <li class="traning-btn3">
+                <a href="#">高強技巧</a>
+              </li>
+            </ol>
+          </li>
+          <li>
+            <a href="product.html">訓練裝備</a>
+          </li>
+          <li>
+            <a href="blog-list.html" class="blog-list-btn">健身文章</a>
+          </li>
+          <li>
+            <a href="godman.html">大神連結</a>
+          </li>
+        </ul>
+        <ul class="sprite">
+          <li class="member">
+            <a href="#"></a>
+          </li>
+          <li class="search">
+            <a href="#"></a>
+          </li>
+          <li class="sh-cart">
+            <a href="#"></a>
+          </li>
+        </ul>
+
+    </header>
+    <!-- 部落格文章總攬 -->
+    <div class="blog-list">
+      <ul>
+        <li>
+          <div class="nav-standardcard">
+            <div class="blog-list-pic">
+              <a href="blog-new2020-losewight.html">
+                <img src="img/Natalia-Kitaeva-500-300.png" alt="">
+              </a>
+            </div>
+            <div class="blog-list-text">
+              <h3>2020最新減肥攻略</h3>
+              <a href="blog-new2020-losewight.html">給2020年想減肥的各位關於造成肥胖的原因、減肥的知識、各種減肥飲食方式的研究是每年都在更新的。可是隨著知識的更新、減肥藥一款接著一款出來,每年的肥胖率一樣是持續上升,要下降的跡象。減肥別再犯的幾個重點迷思少吃多動的減肥迷思少吃多動這句話其實是......more
 					</a>
-				</div>
-				<div class="blog-list-text">
-					<h3>2020最新減肥攻略</h3>
-					<a href="blog-new2020-losewight.html">給2020年想減肥的各位關於造成肥胖的原因、減肥的知識、各種減肥飲食方式的研究是每年都在更新的。可是隨著知識的更新、減肥藥一款接著一款出來,每年的肥胖率一樣是持續上升,要下降的跡象。減肥別再犯的幾個重點迷思少吃多動的減肥迷思少吃多動這句話其實是......more
-					</a>
-				</div>
-			</div>
-		</li>
-		<li>
-			<div class="nav-standardcard">
-				<div class="blog-list-pic">
-					<a href="#"><img src="img/Nicole-Woyak-500-300.png" alt=""></a>
-				</div>
-				<div class="blog-list-text">
-					<h3>如何改善易胖體質,並維持低體脂?!</h3>
-					<a href="#">根據研究來講,肥胖跟天生的基因是有非常大的關聯的,比較大的差別在於天生荷爾蒙的高低比如說有的人天生就比較容易有胰島素分泌問題,那們他們吃碳水化合物就比較容易肥胖或者是他們控制飽足感的荷爾蒙有問題,就比較容易吃不飽、容易餓、容易受到食物誘惑......more</a>
-				</div>			
-			</div>
-		</li>
-		<li>
-			<div class="nav-standardcard">
-				<div class="blog-list-pic">
-					<a href="#"><img src="img/calimove-500-300.png" alt=""></a>
-				</div>
-				<div class="blog-list-text">
-					<h3>有氧運動介紹與重訓期間如何安排有氧</h3>
-					<a href="#">而重訓違者的人通常很討厭有氧,覺得有氧運動很無聊、是給女生在做的。不然就是想要長肌肉的人聽到做有氧會讓肌肉變小、容易消耗肌肉之類的,所以都避免做有氧運動。但是有氧運動對增肌真的沒效嗎，你真的了解有氧運動嗎？有氧運動的定義:需要足夠的氧氣讓身體提供能量的運動,通常......more</a>
-				</div>
-			</div>
-		</li>
-		<li>
-			<div class="nav-standardcard">
-				<div class="blog-list-pic">
-					<a href="#"><img src="img/Demi-500-300.png" alt=""></a>
-				</div>
-				<div class="blog-list-text">
-					<h3>改善圓肩駝-肩關節鬆動術與放鬆</h3>
-					<a href="#">什麼是圓肩?圓肩基本上是上交叉症候群常見的情形可能會是肩關節內旋過多導致身體後側的上斜方肌過緊,中下斜方過弱,身體前側的深層頸屈肌過鬆，胸小肌過緊但會發生圓肩不見得是因為單一原因造成的簡單來說，會是身體的排列出了點問題，只是症狀發生在軀幹的上半部。普遍造成圓肩的原因依我個人的觀......more</a>
-				</div>
-			</div>
-		</li>
-		<li>
-			<div class="nav-standardcard">
-				<div class="blog-list-pic">
-					<a href="#"><img src="img/Gabo-Saturno-500-300.png" alt=""></a>
-				</div>
-				<div class="blog-list-text">
-					<h3>容易造成身體慢性過敏發炎的幾種食物!</h3>
-					<a href="#">先講一下食物過敏是什麼東西,急性過敏是IgE抗體產生的,那比較常見的食物過敏症狀：紅腫、腹瀉、休克、頭暈,慢性食物過敏根據台灣檢測過敏原診所的說法有另一種東西叫做慢性食物過敏,慢性過敏的症狀非常非常的多,幾乎所有你覺得長期不舒適的問題,都有可能是慢性食物過敏......more
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="nav-standardcard">
+            <div class="blog-list-pic">
+              <a href="#"><img src="img/Nicole-Woyak-500-300.png" alt=""></a>
+            </div>
+            <div class="blog-list-text">
+              <h3>如何改善易胖體質,並維持低體脂?!</h3>
+              <a href="#">根據研究來講,肥胖跟天生的基因是有非常大的關聯的,比較大的差別在於天生荷爾蒙的高低比如說有的人天生就比較容易有胰島素分泌問題,那們他們吃碳水化合物就比較容易肥胖或者是他們控制飽足感的荷爾蒙有問題,就比較容易吃不飽、容易餓、容易受到食物誘惑......more</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="nav-standardcard">
+            <div class="blog-list-pic">
+              <a href="#"><img src="img/calimove-500-300.png" alt=""></a>
+            </div>
+            <div class="blog-list-text">
+              <h3>有氧運動介紹與重訓期間如何安排有氧</h3>
+              <a href="#">而重訓違者的人通常很討厭有氧,覺得有氧運動很無聊、是給女生在做的。不然就是想要長肌肉的人聽到做有氧會讓肌肉變小、容易消耗肌肉之類的,所以都避免做有氧運動。但是有氧運動對增肌真的沒效嗎，你真的了解有氧運動嗎？有氧運動的定義:需要足夠的氧氣讓身體提供能量的運動,通常......more</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="nav-standardcard">
+            <div class="blog-list-pic">
+              <a href="#"><img src="img/Demi-500-300.png" alt=""></a>
+            </div>
+            <div class="blog-list-text">
+              <h3>改善圓肩駝-肩關節鬆動術與放鬆</h3>
+              <a href="#">什麼是圓肩?圓肩基本上是上交叉症候群常見的情形可能會是肩關節內旋過多導致身體後側的上斜方肌過緊,中下斜方過弱,身體前側的深層頸屈肌過鬆，胸小肌過緊但會發生圓肩不見得是因為單一原因造成的簡單來說，會是身體的排列出了點問題，只是症狀發生在軀幹的上半部。普遍造成圓肩的原因依我個人的觀......more</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="nav-standardcard">
+            <div class="blog-list-pic">
+              <a href="#"><img src="img/Gabo-Saturno-500-300.png" alt=""></a>
+            </div>
+            <div class="blog-list-text">
+              <h3>容易造成身體慢性過敏發炎的幾種食物!</h3>
+              <a href="#">先講一下食物過敏是什麼東西,急性過敏是IgE抗體產生的,那比較常見的食物過敏症狀：紅腫、腹瀉、休克、頭暈,慢性食物過敏根據台灣檢測過敏原診所的說法有另一種東西叫做慢性食物過敏,慢性過敏的症狀非常非常的多,幾乎所有你覺得長期不舒適的問題,都有可能是慢性食物過敏......more
 		 			</a>
-				</div>
-			</div>
-		</li>
-		<li>
-			<div class="nav-standardcard">
-				<div class="blog-list-pic">
-					<a href="#"><img src="img/Giampaolo-Calvaresi-500-300.png" alt=""></a>
-				</div>
-				<div class="blog-list-text">
-					<h3>解決腰痠肩頸痠-滾筒與花生球使用方式</h3>
-					<a href="#">放鬆其實對於身體健康以及體態都是非常重要的一個環節，不只對於健身者而已，其實每個人都很需要在家中放個滾筒來放鬆。當我們某處肌肉特別緊繃被拉的很短的時候，就會產生肌肉不平衡的狀況，對於關節以及身體的運作都會有負面的影響。很多人會想要問的肌肉痠痛、腰......more
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="nav-standardcard">
+            <div class="blog-list-pic">
+              <a href="#"><img src="img/Giampaolo-Calvaresi-500-300.png" alt=""></a>
+            </div>
+            <div class="blog-list-text">
+              <h3>解決腰痠肩頸痠-滾筒與花生球使用方式</h3>
+              <a href="#">放鬆其實對於身體健康以及體態都是非常重要的一個環節，不只對於健身者而已，其實每個人都很需要在家中放個滾筒來放鬆。當我們某處肌肉特別緊繃被拉的很短的時候，就會產生肌肉不平衡的狀況，對於關節以及身體的運作都會有負面的影響。很多人會想要問的肌肉痠痛、腰......more
 					</a>
-				</div>
-			</div>
-		</li>
-		<li>
-			<div class="nav-standardcard">
-				<div class="blog-list-pic">
-					<a href="#"><img src="img/Kyrie-500-300.png" alt=""></a>
-				</div>
-				<div class="blog-list-text">
-					<h3>睡眠對重訓與健康的重要性</h3>
-					<a href="">簡單來講好的重訓、飲食、睡眠這三個體態改善關鍵是缺一不可的,飲食跟重訓顧得再好,睡眠只要出了問題就容易長脂肪不容易長肌肉重訓、飲食、睡眠也是會互相影響的,睡眠出了問題重訓會出問題因為睡眠決定了你最大修復的訓練量,你練得越多就得睡得越好才能有效修......more
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="nav-standardcard">
+            <div class="blog-list-pic">
+              <a href="#"><img src="img/Kyrie-500-300.png" alt=""></a>
+            </div>
+            <div class="blog-list-text">
+              <h3>睡眠對重訓與健康的重要性</h3>
+              <a href="">簡單來講好的重訓、飲食、睡眠這三個體態改善關鍵是缺一不可的,飲食跟重訓顧得再好,睡眠只要出了問題就容易長脂肪不容易長肌肉重訓、飲食、睡眠也是會互相影響的,睡眠出了問題重訓會出問題因為睡眠決定了你最大修復的訓練量,你練得越多就得睡得越好才能有效修......more
 					</a>
-				</div>
-			</div>
-		</li>
-		<li>
-			<div class="nav-standardcard">
-				<div class="blog-list-pic">
-					<a href="#">
-						<img src="img/Maksim-Trukhonovets-500-300.png" alt="">
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="nav-standardcard">
+            <div class="blog-list-pic">
+              <a href="#">
+                <img src="img/Maksim-Trukhonovets-500-300.png" alt="">
+              </a>
+            </div>
+            <div class="blog-list-text">
+              <h3>增肌減脂</h3>
+              <a href="#">增肌減脂步驟一增肌減脂對於特定人群是很容易的,所以第一個步驟就是搞清楚自己是否有資格增肌減脂。以下五種狀態下要增肌減脂不難,第一種狀態，新手FFMI數值17~20都可以算是新手（可以上網計算）新手的定義其實蠻廣泛的,一年以內一......more
 					</a>
-				</div>
-				<div class="blog-list-text">
-					<h3>增肌減脂</h3>
-					<a href="#">增肌減脂步驟一增肌減脂對於特定人群是很容易的,所以第一個步驟就是搞清楚自己是否有資格增肌減脂。以下五種狀態下要增肌減脂不難,第一種狀態，新手FFMI數值17~20都可以算是新手（可以上網計算）新手的定義其實蠻廣泛的,一年以內一......more
-					</a>
-				</div>
-			</div>		
-		</li>
-	</ul>
+            </div>
+          </div>
+        </li>
+      </ul>
 
-</div>
-<!-- -----footer----- -->
-	<footer>
-			<ul>
-				<li>
-					<a href="index.html">首頁</a>
-				</li>
-				<li>
-					<a href="product-door-pull-up-bar.html">熱門商品</a>
-				</li>
-				<li>
-					<a href="questions-list.html">常見問題</a>
-				</li>
-				<li>
-					<a href="contact-us-list.html">聯繫我們</a>
-				</li>
-			</ul>
-			<p>Copyright© 2020 All Rights Reserved.</p>
-		</footer>
-</div>
-<script src="./css/javascript.js"> </script>
+    </div>
+    <!-- -----footer----- -->
+    <footer>
+      <ul>
+        <li>
+          <a href="index.html">首頁</a>
+        </li>
+        <li>
+          <a href="product-door-pull-up-bar.html">熱門商品</a>
+        </li>
+        <li>
+          <a href="questions-list.html">常見問題</a>
+        </li>
+        <li>
+          <a href="contact-us-list.html">聯繫我們</a>
+        </li>
+      </ul>
+      <p>Copyright© 2020 All Rights Reserved.</p>
+    </footer>
+    </div>
+    <script src="./js/javascript.js">
+    </script>
 </body>
+
 </html>
