--- a/product-door-pull-up-bar.html
+++ b/product-door-pull-up-bar.html
@@ -1,259 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="./js/jquery-3.5.1.js"></script>
-	<script src="./js/jquery-ui.min.js"></script>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="./lightbox2-2.11.3/dist/css/lightbox.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/rwd.css">
-	<title>門上槓-Door pull-up-bar</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="./js/jquery-3.5.1.js"></script>
+  <script src="./js/jquery-ui.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="./lightbox2-2.11.3/dist/css/lightbox.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/rwd.css">
+  <title>門上槓-Door pull-up-bar</title>
 </head>
+
 <body>
-<div class="wrapper">
-	<!----------標題----------- -->
-	<header>
-		<a href="index.html" class="logo">
-			<img src="img/logo10-8.png" alt="">
-		</a>
-		<span class="material-icons burger">reorder</span>
-		<div class="maun_sprite">
-			<ul class="menu">
-				<li>
-					<a href="#" class="tran-btn">開始訓練</a>
-					<ol>
-						<li class="traning-btn1">
-							<a href="training.html">新手入門</a>
-						</li>
-						<li class="traning-btn2">
-							<a href="#">高級技巧</a>
-						</li>
-						<li class="traning-btn3">
-							<a href="#">高強技巧</a>
-						</li>
-					</ol>
-				</li> 
-				<li>
-					<a href="product.html" class="product-btn">訓練裝備</a>
-				</li>
-				<li>
-					<a href="blog-list.html">健身文章</a>
-				</li>
-				<li>
-					<a href="godman.html">大神連結</a>
-				</li>
-			</ul>
-			<ul class="sprite">
-				<li class="member">
-					<a href="#"></a>
-				</li>
-				<li class="search">
-					<a href="#"></a>
-				</li>
-				<li class="sh-cart">
-					<a href="#"></a>
-				</li> 
-			</ul>
-		</div>
-	
-</header>
-<!-- 麵包屑 -->
-<ul class="Bread-Crumbs">
-	<li>
-		<a href="product.html">商品裝備</a>
-	</li>
-	<li> > </li> 
-	<li>
-		<p>門上槓</p>
-	</li>
-</ul>
-<!--門上槓介紹-->
-<div class="nev1-door-pull-up-bar-product">
-	<div class="nav-standard">
-		<div class="nev1-door-pull-up-bar-text">
-			<h1>門上槓</h1>
-			<div class="nev1-door-pull-up-bar-text-p">
-				<p>數秒之內即可固定,<br>不會滑落,各種練習和握力姿勢,<br>不會損壞門框</p>
-				<p>$2247</p>
-			</div>
-			<div class="shop-btn">
-				<a href="#" class="purchase">訂購</a>
-				<a href="" class="shpo-cart">加入購物車</a>
-			</div>
-		</div>
-	</div>
-	<div class="nav-standard">
-	 	<div class="nev1-door-pull-up-bar-pic ">
-	 		<a class="example-image" href="img/product/door-pull-up-bar-400-400.png" data-lightbox="example-set">
-	 			<img img class="example-image" src="img/product/door-pull-up-bar-400-400.png" alt="">
-			</a>
-			 <ul>
-				<li>
-					<a class="example-image" href="./img/product/door-pull-up-bar-cm-400-400.png" data-lightbox="example-set">
-						<img class="example-image" src="./img/product/door-pull-up-bar-cm-400-400.png" alt="">
-					</a>
-				</li>
-				<li>
-					<a class="example-image" href="./img/product/door-pull-up-bar-peop-400-400.png" data-lightbox="example-set">
-						<img class="example-image" src="./img/product/door-pull-up-bar-peop-400-400.png" alt="">
-					</a>
-				</li>
-			</ul>
-	 	</div>
-	</div>
-</div>
-<!-- 產品詳細資訊 -->
- <div class="nev1-door-pull-up-bar-product-2-description"> 
-		<ul class = "door-pull-up-bar-description-pic">
-			<li>
-				<img src="./img/product/door-pull-up-bar-else1.png" alt="">
-			</li>
-			<li>
-				<img src="./img/product/door-pull-up-bar-else2.png" alt="">
-			</li>
-			<li>
-				<img src="./img/product/door-pull-up-bar-else3.png" alt="">
-			</li>
-			<li>
-				<img src="./img/product/door-pull-up-bar-else4.png" alt="">
-			</li>
-		</ul>
-		<h1>專業門上槓，用於懸掛在門框中</h1>
-		<p>
-			可以將門框的門上拉桿固定到門框上-在幾秒鐘內將您的房屋變成私人健身房。訓練許多運動，包括引體向上，抬腿，提膝，屈腿或在地板上進行諸如坐下俯臥或俯臥撑等運動，使您的鍛煉變得100％靈活，不受擁擠的體育館的影響。如果您正在尋找不想或無法安裝在牆壁或天花板上的高質量上拉槓，門上槓是理想的選擇。
-		</p>
-		<h1>門上槓的好處</h1>
-	<div class="nev1-door-pull-up-bar-product-3-description">
-			<ul>
-				<li>
-					<span class="material-icons">done_outline</span>
-					<span class="description">數秒之內即可安裝，不會滑落：</span>門口上拉桿可在數秒內安全地安裝在門框上，無需螺釘或鑽孔，可立即將您的房屋變成家庭健身房。</p>
-				</li>
-				<li>
-					<span class="material-icons">done_outline</span>
-					<span class="description">不打滑：</span>由於安全安裝在門框中，因此沒有伸縮拉桿那樣的危險打滑或受傷危險。
-				</li>
-				<li>
-					<span class="material-icons">done_outline</span>
-					<span class="description">大量的運動：</span>具有不同握力位置的引體向上（寬，窄，引體向上，平行），腿部抬高，前桿和許多其他運動，可進行完全不同的鍛煉。您也可以使用地板上的槓鈴進行俯臥撑或坐姿俯臥。
-				</li>
-				<li>
-					<span class="material-icons">done_outline</span>
-					<span class="description">包括孔眼：</span>孔眼可讓您附加吊索訓練器以進行更多運動。
-				</li>
-				<li>
-					<span class="material-icons">done_outline</span>
-					<span class="description">比其他型號更高：</span>由於其設計，門口拉桿的手柄比同類型號更高，因此您不必彎曲太多腿。
-				</li>
-				<li>
-					<span class="material-icons">done_outline</span>
-					<span class="description">所有接觸點：</span>由於在所有接觸點上都有防護墊，因此不會損壞門框。
-				</li>
-				<li>
-					<span class="material-icons">done_outline</span>
-					<span class="description">高安全性：</span>高安全性：帶有橫桿和高強度螺釘連接的加強結構確保最大的穩定性和安全的培訓，而不會搖擺或打滑。
-				</li>
-				<li>
-					<span class="material-icons">done_outline</span>
-					<span class="description">防滑手柄：</span>泡沫覆蓋物即使在出汗的手上也能為您提供完美的抓地力，並防止醜陋的老繭。
-				</li>
-				<li>
-					<span class="material-icons">done_outline</span>
-					<span class="description">高度可調：</span>3步驟可調安裝支架允許不同的高度。
-				</li>
-			</ul>
-		<div class="door-pull-up-bar-product-description">
-			<table>
-				<tr class = "table-list">
-					<td>門上槓</td>
-					<td>細節</td>
-				</tr>
-				<tr>
-					<td>材料</td>
-					<td>鋼</td>
-				</tr>
-				<tr>
-					<td>顏色</td>
-					<td>黑色</td>
-				</tr>
-				<tr>
-					<td>最高寬度</td>
-					<td>100厘米(39英寸)</td>
-				</tr>
-				<tr>
-					<td>重量</td>
-					<td>4.2公斤(9磅)</td>
-				</tr>
-				<tr>
-					<td>最高承重</td>
-					<td>110公斤</td>
-				</tr>
-				<tr>
-					<td>門框之間的寬度</td>
-					<td>65-95厘米(25-37英寸)</td>
-				</tr>
-				<tr>
-					<td>門框深度</td>
-					<td>15-25厘米(6-10英寸)</td>
-				</tr>
-				<tr>
-					<td>保修</td>
-					<td>2年，另請參閱保修條件</td>
-				</tr>
-			</table>
-			<p>
-				建議：我們建議您預先測量門框的寬度和門框的深度，以使上拉桿也適合您的門。
-			</p>
-		</div>
-	</div>
-		
-		<p>
-			還在猶豫？立即測試我們的上拉槓30天。如果由於任何原因您不滿意，可以輕鬆退貨，<br>
-			<span class="description">退還全額購買價格</span>。如果您不喜歡它，請將其寄回。就這麼簡單！
-		</p>
-</div> 
+  <div class="wrapper">
+    <!----------標題----------- -->
+    <header>
+      <a href="index.html" class="logo">
+        <img src="img/logo10-8.png" alt="">
+      </a>
+      <span class="material-icons burger">reorder</span>
+      <div class="maun_sprite">
+        <ul class="menu">
+          <li>
+            <a href="#" class="tran-btn">開始訓練</a>
+            <ol>
+              <li class="traning-btn1">
+                <a href="training.html">新手入門</a>
+              </li>
+              <li class="traning-btn2">
+                <a href="#">高級技巧</a>
+              </li>
+              <li class="traning-btn3">
+                <a href="#">高強技巧</a>
+              </li>
+            </ol>
+          </li>
+          <li>
+            <a href="product.html" class="product-btn">訓練裝備</a>
+          </li>
+          <li>
+            <a href="blog-list.html">健身文章</a>
+          </li>
+          <li>
+            <a href="godman.html">大神連結</a>
+          </li>
+        </ul>
+        <ul class="sprite">
+          <li class="member">
+            <a href="#"></a>
+          </li>
+          <li class="search">
+            <a href="#"></a>
+          </li>
+          <li class="sh-cart">
+            <a href="#"></a>
+          </li>
+        </ul>
+      </div>
 
-<!-- 門上槓評論區與留言 -->
+    </header>
+    <!-- 麵包屑 -->
+    <ul class="Bread-Crumbs">
+      <li>
+        <a href="product.html">商品裝備</a>
+      </li>
+      <li> > </li>
+      <li>
+        <p>門上槓</p>
+      </li>
+    </ul>
+    <!--門上槓介紹-->
+    <div class="nev1-door-pull-up-bar-product">
+      <div class="nav-standard">
+        <div class="nev1-door-pull-up-bar-text">
+          <h1>門上槓</h1>
+          <div class="nev1-door-pull-up-bar-text-p">
+            <p>數秒之內即可固定,<br>不會滑落,各種練習和握力姿勢,<br>不會損壞門框</p>
+            <p>$2247</p>
+          </div>
+          <div class="shop-btn">
+            <a href="#" class="purchase">訂購</a>
+            <a href="" class="shpo-cart">加入購物車</a>
+          </div>
+        </div>
+      </div>
+      <div class="nav-standard">
+        <div class="nev1-door-pull-up-bar-pic ">
+          <a class="example-image" href="img/product/door-pull-up-bar-400-400.png" data-lightbox="example-set">
+            <img img class="example-image" src="img/product/door-pull-up-bar-400-400.png" alt="">
+          </a>
+          <ul>
+            <li>
+              <a class="example-image" href="./img/product/door-pull-up-bar-cm-400-400.png" data-lightbox="example-set">
+                <img class="example-image" src="./img/product/door-pull-up-bar-cm-400-400.png" alt="">
+              </a>
+            </li>
+            <li>
+              <a class="example-image" href="./img/product/door-pull-up-bar-peop-400-400.png" data-lightbox="example-set">
+                <img class="example-image" src="./img/product/door-pull-up-bar-peop-400-400.png" alt="">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- 產品詳細資訊 -->
+    <div class="nev1-door-pull-up-bar-product-2-description">
+      <ul class="door-pull-up-bar-description-pic">
+        <li>
+          <img src="./img/product/door-pull-up-bar-else1.png" alt="">
+        </li>
+        <li>
+          <img src="./img/product/door-pull-up-bar-else2.png" alt="">
+        </li>
+        <li>
+          <img src="./img/product/door-pull-up-bar-else3.png" alt="">
+        </li>
+        <li>
+          <img src="./img/product/door-pull-up-bar-else4.png" alt="">
+        </li>
+      </ul>
+      <h1>專業門上槓，用於懸掛在門框中</h1>
+      <p>
+        可以將門框的門上拉桿固定到門框上-在幾秒鐘內將您的房屋變成私人健身房。訓練許多運動，包括引體向上，抬腿，提膝，屈腿或在地板上進行諸如坐下俯臥或俯臥撑等運動，使您的鍛煉變得100％靈活，不受擁擠的體育館的影響。如果您正在尋找不想或無法安裝在牆壁或天花板上的高質量上拉槓，門上槓是理想的選擇。
+      </p>
+      <h1>門上槓的好處</h1>
+      <div class="nev1-door-pull-up-bar-product-3-description">
+        <ul>
+          <li>
+            <span class="material-icons">done_outline</span>
+            <span class="description">數秒之內即可安裝，不會滑落：</span>門口上拉桿可在數秒內安全地安裝在門框上，無需螺釘或鑽孔，可立即將您的房屋變成家庭健身房。</p>
+          </li>
+          <li>
+            <span class="material-icons">done_outline</span>
+            <span class="description">不打滑：</span>由於安全安裝在門框中，因此沒有伸縮拉桿那樣的危險打滑或受傷危險。
+          </li>
+          <li>
+            <span class="material-icons">done_outline</span>
+            <span class="description">大量的運動：</span>具有不同握力位置的引體向上（寬，窄，引體向上，平行），腿部抬高，前桿和許多其他運動，可進行完全不同的鍛煉。您也可以使用地板上的槓鈴進行俯臥撑或坐姿俯臥。
+          </li>
+          <li>
+            <span class="material-icons">done_outline</span>
+            <span class="description">包括孔眼：</span>孔眼可讓您附加吊索訓練器以進行更多運動。
+          </li>
+          <li>
+            <span class="material-icons">done_outline</span>
+            <span class="description">比其他型號更高：</span>由於其設計，門口拉桿的手柄比同類型號更高，因此您不必彎曲太多腿。
+          </li>
+          <li>
+            <span class="material-icons">done_outline</span>
+            <span class="description">所有接觸點：</span>由於在所有接觸點上都有防護墊，因此不會損壞門框。
+          </li>
+          <li>
+            <span class="material-icons">done_outline</span>
+            <span class="description">高安全性：</span>高安全性：帶有橫桿和高強度螺釘連接的加強結構確保最大的穩定性和安全的培訓，而不會搖擺或打滑。
+          </li>
+          <li>
+            <span class="material-icons">done_outline</span>
+            <span class="description">防滑手柄：</span>泡沫覆蓋物即使在出汗的手上也能為您提供完美的抓地力，並防止醜陋的老繭。
+          </li>
+          <li>
+            <span class="material-icons">done_outline</span>
+            <span class="description">高度可調：</span>3步驟可調安裝支架允許不同的高度。
+          </li>
+        </ul>
+        <div class="door-pull-up-bar-product-description">
+          <table>
+            <tr class="table-list">
+              <td>門上槓</td>
+              <td>細節</td>
+            </tr>
+            <tr>
+              <td>材料</td>
+              <td>鋼</td>
+            </tr>
+            <tr>
+              <td>顏色</td>
+              <td>黑色</td>
+            </tr>
+            <tr>
+              <td>最高寬度</td>
+              <td>100厘米(39英寸)</td>
+            </tr>
+            <tr>
+              <td>重量</td>
+              <td>4.2公斤(9磅)</td>
+            </tr>
+            <tr>
+              <td>最高承重</td>
+              <td>110公斤</td>
+            </tr>
+            <tr>
+              <td>門框之間的寬度</td>
+              <td>65-95厘米(25-37英寸)</td>
+            </tr>
+            <tr>
+              <td>門框深度</td>
+              <td>15-25厘米(6-10英寸)</td>
+            </tr>
+            <tr>
+              <td>保修</td>
+              <td>2年，另請參閱保修條件</td>
+            </tr>
+          </table>
+          <p>
+            建議：我們建議您預先測量門框的寬度和門框的深度，以使上拉桿也適合您的門。
+          </p>
+        </div>
+      </div>
 
-	<!-- -----footer----- -->
-	<footer>
-			<ul>
-				<li>
-					<a href="index.html">首頁</a>
-				</li>
-				<li>
-					<a href="product-door-pull-up-bar.html">熱門商品</a>
-				</li>
-				<li>
-					<a href="questions-list.html">常見問題</a>
-				</li>
-				<li>
-					<a href="contact-us-list.html">聯繫我們</a>
-				</li>
-			</ul>
-			<p>Copyright© 2020 All Rights Reserved.</p>
-		</footer>
-</div>
-<script src="./lightbox2-2.11.3/dist/js/lightbox-plus-jquery.min.js"> </script>
-<script src="./css/javascript.js"> </script>	
+      <p>
+        還在猶豫？立即測試我們的上拉槓30天。如果由於任何原因您不滿意，可以輕鬆退貨，<br>
+        <span class="description">退還全額購買價格</span>。如果您不喜歡它，請將其寄回。就這麼簡單！
+      </p>
+    </div>
+
+    <!-- 門上槓評論區與留言 -->
+
+    <!-- -----footer----- -->
+    <footer>
+      <ul>
+        <li>
+          <a href="index.html">首頁</a>
+        </li>
+        <li>
+          <a href="product-door-pull-up-bar.html">熱門商品</a>
+        </li>
+        <li>
+          <a href="questions-list.html">常見問題</a>
+        </li>
+        <li>
+          <a href="contact-us-list.html">聯繫我們</a>
+        </li>
+      </ul>
+      <p>Copyright© 2020 All Rights Reserved.</p>
+    </footer>
+  </div>
+  <script src="./lightbox2-2.11.3/dist/js/lightbox-plus-jquery.min.js">
+  </script>
+  <script src="./js/javascript.js">
+  </script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
