--- a/blog-list.html
+++ b/blog-list.html
@@ -15,7 +15,7 @@
 <body>
   <h1>test3</h1>
   <div class="wrapper">
-
+    <!-- <h1>test</h1> -->
     <!----------標題----------- -->
     <header>
       <a href="index.html" class="logo">
